@@ -1,3 +1,8 @@
+Tue Jun  8 16:51:48 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb: backported exception handling from trunk.
+	  [ruby-core:29745]
+
 Tue Jun  8 16:42:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
